# artefaux

./: .gitignore  ATTRIBUTION.md  CITATION.cff  CLAUDE.md  DATASHEET.md  Makefile  README.md  manifest.csv  manifest.json  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  GENERATION.md  LABEL_SCHEMA.md
recipes/: corpus.yaml
recipes/source_ids/: ptbxl_clean.csv  ptbxl_noisy.csv
reports/: artefaux_v1_corpus_report.md  artefaux_v2_corpus_report.md  artefaux_v2_explainer.md  torsade_v1_corpus_report.md
scripts/: download_sources.py  export_corpus.py  generate.py  make_figures.py  select_sources.py
scripts/reports/: generate_corpus_report.py  generate_v2_explainer.py
src/artefaux/: constants.py  corpus.py  recipes.py
src/torsade/: __init__.py  build.py  cli.py  constants.py  corpus.py  electrode_domain.py  labels.py  loaders.py  noise_shapes.py  precordial.py  provenance.py  recipes.py  synthetic.py  writer.py
tests/: __init__.py  conftest.py  test_amplitude.py  test_corpus_integration.py  test_electrode_domain.py  test_engineering.py  test_labels.py  test_loaders.py  test_mixing.py  test_precordial.py  test_provenance.py  test_real_noise_thresholds.py  test_recipes.py  test_report_generator.py  test_resolve_source_ids.py  test_selection.py  test_v2_explainer.py  test_writer.py
